Added default api versioning header based.

--- a/WebAPI/Versioning/TechoramaSessie.API.Versioning/TechoramaSessie.API.Versioning.csproj
+++ b/WebAPI/Versioning/TechoramaSessie.API.Versioning/TechoramaSessie.API.Versioning.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview-19075-0444" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
   </ItemGroup>
 
 </Project>
