--- a/WebAPI/Documentation/TechoramaSessie2019.WebApi.Documentation/TechoramaSessie2019.WebApi.Documentation.Advanced.csproj
+++ b/WebAPI/Documentation/TechoramaSessie2019.WebApi.Documentation/TechoramaSessie2019.WebApi.Documentation.Advanced.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp3.0\MyApi.xml</DocumentationFile>
+    <OutputPath>bin\Debug\netcoreapp3.0\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview-19075-0444" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
