--- a/IdentityServer/Source/IdentityServer/appsettings.json
+++ b/IdentityServer/Source/IdentityServer/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=IdentityServer.db;",
+    "DefaultConnection": "Data Source=C:\\Git\\r.vanmeer@webintegration.nl\\Techorama\\TechoramaSessie2019\\IdentityServer\\Source\\IdentityServer\\AppData\\IdentityServer.db;"
 
 
-    
+
   }
 }
