--- a/WebAPI/HealthChecks/TechoramaSessie2019.Api.HealthChecks.Advanced/TechoramaSessie2019.Api.HealthChecks.Advanced.csproj
+++ b/WebAPI/HealthChecks/TechoramaSessie2019.Api.HealthChecks.Advanced/TechoramaSessie2019.Api.HealthChecks.Advanced.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\TechoramaSessie.API.Core\TechoramaSessie.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
