--- a/WebAPI/HealthChecks/TechoramaSessie2019.Api.HealthChecks/TechoramaSessie2019.Api.HealthChecks.csproj
+++ b/WebAPI/HealthChecks/TechoramaSessie2019.Api.HealthChecks/TechoramaSessie2019.Api.HealthChecks.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview-19075-0444" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\TechoramaSessie.API.Core\TechoramaSessie.API.Core.csproj" />
   </ItemGroup>
 
 </Project>
