--- a/WebAPI/Versioning/TechoramaSessie.API.Versioning/TechoramaSessie.API.Versioning.csproj
+++ b/WebAPI/Versioning/TechoramaSessie.API.Versioning/TechoramaSessie.API.Versioning.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\TechoramaSessie.API.Core\TechoramaSessie.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
